# xettel

./: .hgignore  README.md  TODO.md  Zettel.py  ZettelXapian.py  Zettelkasten.py  bokz.py  getlinks.hs  pandocfilter.py  setup.cfg  zettelkasten.py
src/: __init__.py  subcommands.py
src/base/: Zettel.py
src/impl/mmd/: ZettelMMD.py  ZettelkastenMMD.py
src/zxapian/: basic.py  resources.py
xettel/: __main__.py  commands.py
xettel/base/: Zettel.py  Zettelkasten.py
xettel/impl/: __init__.py
xettel/impl/mmd/: ZettelMMD.py  ZettelkastenMMD.py  resources.py
xettel/impl/xapian/: ZettelX.py  ZettelkastenX.py
xettel/implementation/mmd/: ZettelkastenMMD.py
xettel/xapian/: ZXWriter.py  writer.py
xettel/zxapian/: basic.py  reader.py  resources.py  writer.py
