[metadata]
name = xettel
description = notmuch-inspired Zettelkasten tool
long_description = file: README.md
long_description_content_type = text/markdown

version = 0.0.5

[options]
packages = find:

install_requires =
  xapian-bindings
  click
  pymmd
  toml
  networkx
  pandocfilters

[options.entry_points]
console_scripts = 
  xettel = xettel.commands:cli


